--- a/.github/workflows/compile_esp8266.yml
+++ b/.github/workflows/compile_esp8266.yml
@@ -7,7 +7,7 @@ on:
     - '**.md' # Do no build on *.md changes
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
@@ -36,10 +36,6 @@ jobs:
       run: python convert.py
     - name: Run PlatformIO
       run: pio run -d tools/esp8266
-    - name: rename
+    - name: Rename firmware binaries
       working-directory: tools/esp8266/scripts
       run: python getVersion.py
-    - uses: actions/upload-artifact@v3
-      with:
-        name: esp8266_ahoy
-        path: tools/esp8266/.pio/build/out/*.bin
