--- a/.github/workflows/compile_esp8266.yml
+++ b/.github/workflows/compile_esp8266.yml
@@ -64,8 +64,11 @@ jobs:
     - name: install-zip
       uses: montudor/action-zip@v1
     - name: create-artifact
-      run: |
-          zip --junk-paths ahoy-${{ steps.rename-binary-files.outputs.name }}.zip tools/esp8266/.pio/build/out/*.bin tools/esp8266/User_Manual.md
+      uses: thedoctor0/zip-release@main
+      with:
+        type: zip
+        filename: ahoy-${{ steps.rename-binary-files.outputs.name }}.zip
+        path: tools/esp8266/.pio/build/out/
     - name: upload-release
       id: upload-release
       uses: actions/upload-release-asset@v1
